--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -599,8 +599,9 @@
     }
   }
 
-  &._large._recommendation .card__main {
-    padding-bottom: var(--this-spacing);
+  &._large._recommendation :where(.cell-desc, .cell-list, .cell-tax):last-child,
+  &._large._recommendation._no-tax:not(._seamless) .cell-img {
+    margin-bottom: var(--this-spacing);
   }
 
   &._recommendation:not(._compact) {
@@ -1016,22 +1017,35 @@
   }
 }
 
-// .card._small:not(._vertical) {
-//   .card__image {
-//     margin-top: calc(-1 * var(--this-spacing)) !important;
-//     margin-bottom: calc(-1 * var(--this-spacing)) !important;
-//     margin-left: calc(-1 * var(--this-spacing)) !important;
-//     border-top-right-radius: 0 !important;
-//     border-bottom-right-radius: 0 !important;
-//     width: calc((var(--card-cover-width, 60px) + var(--this-spacing)) * var(--card-cover-width-mod, 1)) !important;
-//   }
+.card:not(._article, ._vertical)._seamless {
+  .cell-img {
+    margin: 0;
+    border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important;
+    width: calc((var(--card-cover-width, 60px) + var(--this-spacing)) * var(--card-cover-width-mod, 1)) !important;
+    max-width: var(--card-cover-max-width-smallest, 15vw);
 
-//   ._grid._small {
-//     grid-template-areas:
-//       "img title"
-//       "img meta"
-//       "img desc"
-//       "img list"
-//       "img foot";
-//   }
-// }
+    @include bp(480px) {
+      max-width: var(--card-cover-max-width-small, 18vw);
+    }
+
+    @include bp(640px) {
+      max-width: var(--card-cover-max-width-medium, 20vw);
+    }
+
+    @include bp(768px) {
+      max-width: var(--card-cover-max-width-large, unset);
+    }
+  }
+
+  ._grid {
+    grid-template-areas:
+      'img head'
+      'img title'
+      'img meta'
+      'img desc'
+      'img list'
+      'img tax'
+      'img foot';
+  }
+}
