Even more multi-site registration crap
Seriously!

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -154,7 +154,7 @@
 
 .post-password-form input[type=submit],
 button[type=submit]:where(:not(._inline)),
-.wp-signup-container input[type=submit] {
+:where(.wp-signup-container, .wp-activate-container) input[type=submit] {
   @extend %button;
 }
 
