--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -87,17 +87,17 @@
 
   // === BACKGROUNDS ===========================================================
 
-  --bg-50-free: #{hsl_code_free(240, 20, 99)}; // #fcfcfd
+  --bg-50-free: #{hsl_code_free(210, 20, 99)}; // #fcfcfd
   --bg-100-free: #{hsl_code_free(210, 20, 98)}; // #f9fafb
   --bg-200-free: #{hsl_code_free(210, 10, 96)}; // #f4f5f6
   --bg-300-free: #{hsl_code_free(210, 13, 91)}; // #e5e8eb
-  --bg-400-free: #{hsl_code_free(220, 11, 84)}; // #d2d5db
-  --bg-500-free: #{hsl_code_free(219, 11, 75)}; // #b8bdc6
-  --bg-600-free: #{hsl_code_free(220, 9, 46)}; // #6b7280 (Tailwind Gray 500)
-  --bg-700-free: #{hsl_code_free(215, 14, 34)}; // #4b5563 (Tailwind Gray 600)
-  --bg-800-free: #{hsl_code_free(215, 28, 17)}; // #1f2937 (Tailwind Gray 800)
-  --bg-900-free: #{hsl_code_free(221, 39, 11)}; // #111827 (Tailwind Gray 900)
-  --bg-950-free: #{hsl_code_free(224, 71, 4)}; // #030712 (Tailwind Gray 950)
+  --bg-400-free: #{hsl_code_free(210, 11, 84)}; // #d2d6db
+  --bg-500-free: #{hsl_code_free(210, 11, 75)}; // #b8bfc6
+  --bg-600-free: #{hsl_code_free(210, 9, 46)}; // #6b7580
+  --bg-700-free: #{hsl_code_free(210, 14, 34)}; // #4b5763
+  --bg-800-free: #{hsl_code_free(210, 28, 17)}; // #1f2b37
+  --bg-900-free: #{hsl_code_free(210, 39, 11)}; // #111c27
+  --bg-950-free: #{hsl_code_free(210, 71, 4)}; // #030a11
 
   // === FOREGROUNDS ===========================================================
 
