Fix chapter links to 404 pages

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -695,6 +695,11 @@ html:not(.logged-in) body:not(.logged-in) {
         &:hover {
           color: var(--chapter-list-link-color-hover, var(--heading-link-color-hover));
         }
+
+        &:not([href]) {
+          cursor: default;
+          color: var(--fg-700);
+        }
       }
 
       &-subrow {
