Add fictioneer_filter_comment_actions filter

--- a/src/scss/comments.scss
+++ b/src/scss/comments.scss
@@ -636,6 +636,13 @@
     }
   }
 
+  &__actions {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 12px;
+  }
+
   &__fingerprint {
     cursor: help;
 
