Improve combined card footer style
The rating label is now right-aligned, which looks better on wide sites.

--- a/src/scss/customize/card-style-combined.scss
+++ b/src/scss/customize/card-style-combined.scss
@@ -12,6 +12,8 @@
 
   .card__main > .card__footer .rating-letter-label {
     font-weight: 700;
+    place-content: center right;
+    text-align: right;
   }
 
   .card__main > .card__footer,
