--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -135,13 +135,13 @@
     display: flex;
     align-items: center;
     gap: .5em;
-    font-size: var(--card-title-font-size, clamp(15px, 4.1cqw, 18px));
+    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 4.1cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
     margin: var(--this-spacing) var(--this-spacing) .75em var(--this-spacing); // Based on font-size
   }
 
   &__title {
     font-family: var(--ff-card-title);
-    font-size: var(--card-title-font-size, clamp(15px, 4.1cqw, 18px));
+    font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 4.1cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
 
     &._with-delete {
       padding-right: 1.75em;
@@ -329,7 +329,7 @@
   }
 
   &__content {
-    font-size: var(--card-content-font-size, clamp(13px, 3.5cqw, 15px));
+    font-size: var(--card-content-font-size, clamp(13px + var(--card-font-size-min-mod, 0px), 3.5cqw + var(--card-font-size-grow-mod, 0px), 15px + var(--card-font-size-max-mod, 0px)));
     line-height: var(--card-line-height, 1.45);
     overflow-wrap: break-word;
 
@@ -359,7 +359,7 @@
     display: grid;
     gap: 3px;
     color: var(--fg-500);
-    font-size: var(--card-list-left-font-size, clamp(12px, 3.25cqw, 14px));
+    font-size: var(--card-list-left-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 3.25cqw + var(--card-font-size-grow-mod, 0px), 14px + var(--card-font-size-max-mod, 0px)));
     line-height: 1.3;
 
     &-item {
@@ -405,7 +405,7 @@
     .card__right {
       flex: 0 0 auto;
       color: var(--fg-800);
-      font-size: var(--card-list-right-font-size, clamp(12px, 2.5cqw, 13.5px));
+      font-size: var(--card-list-right-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 2.5cqw + var(--card-font-size-grow-mod, 0px), 13.5px + var(--card-font-size-max-mod, 0px)));
       line-height: 1.55;
 
       &._flex {
@@ -422,7 +422,7 @@
   &__tag-list {
     color: var(--fg-700); // Separators, tags have own color
     font-family: var(--ff-base);
-    font-size: var(--card-tags-font-size, clamp(12px, 2.75cqw, 13px));
+    font-size: var(--card-tags-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 2.75cqw + var(--card-font-size-grow-mod, 0px), 13px + var(--card-font-size-max-mod, 0px)));
     line-height: 1.5;
     padding: 0 1px; // Visually more "embedded"
 
@@ -471,7 +471,7 @@
     display: flex;
     gap: 3px;
     color: var(--card-footer-color, var(--fg-700));
-    font-size: var(--card-footer-font-size, clamp(11.5px, 3cqw, 13px));
+    font-size: var(--card-footer-font-size, clamp(11.5px + var(--card-font-size-min-mod, 0px), 3cqw + var(--card-font-size-grow-mod, 0px), 13px + var(--card-font-size-max-mod, 0px)));
     line-height: 1;
     margin-top: var(--card-footer-margin-top, var(--this-spacing));
 
@@ -529,7 +529,7 @@
     flex-direction: column;
     justify-content: space-between;
     background: var(--card-overlay-bg-color);
-    font-size: var(--card-overlay-font-size, clamp(12px, 3.25cqw, 14px));
+    font-size: var(--card-overlay-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 3.25cqw + var(--card-font-size-grow-mod, 0px), 14px + var(--card-font-size-max-mod, 0px)));
     line-height: 1.33;
     border-radius: var(--layout-border-radius-small);
 
@@ -732,7 +732,7 @@
       'foot foot';
 
     .cell-title {
-      font-size: var(--card-title-font-size, clamp(15px, 3.065cqw, 18px));
+      font-size: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
       margin-bottom: var(--small-card-title-margin-bottom, .4em);
     }
   }
@@ -935,7 +935,7 @@
 
       &__title {
         background: var(--skeleton-cutout-color);
-        height: var(--card-title-font-size, clamp(15px, 3.065cqw, 18px));
+        height: var(--card-title-font-size, clamp(15px + var(--card-font-size-min-mod, 0px), 3.065cqw + var(--card-font-size-grow-mod, 0px), 18px + var(--card-font-size-max-mod, 0px)));
         max-width: 250px;
       }
 
@@ -995,7 +995,7 @@
     line-height: 1;
 
     &._small {
-      font-size: var(--card-bookmark-meta-font-size, clamp(12px, 2.75cqw, 13px));
+      font-size: var(--card-bookmark-meta-font-size, clamp(12px + var(--card-font-size-min-mod, 0px), 2.75cqw + var(--card-font-size-grow-mod, 0px), 13px + var(--card-font-size-max-mod, 0px)));
     }
 
     > :is(i, .icon) {
