Add function to extract release notes from update message

--- a/src/scss/admin/admin.scss
+++ b/src/scss/admin/admin.scss
@@ -105,6 +105,14 @@ td.fictioneer_patreon_lock_amount {
   }
 }
 
+.fictioneer-update-notice {
+  ul {
+    list-style: disc;
+    padding-left: 14px;
+    margin: 8px 0 0;
+  }
+}
+
 // =============================================================================
 // CUSTOMIZER
 // =============================================================================
