--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -1,6 +1,5 @@
-// If outside window, activate sticky navigation
 .nav-observer {
-  top: calc(-1px + var(--nav-observer-offset, 0px));
+  top: calc(0 + var(--nav-observer-offset, 0px));
 }
 
 // Observer must account for large admin bar
