Improve main navigation border-radius for items
Annoying

--- a/src/scss/_icon-menu.scss
+++ b/src/scss/_icon-menu.scss
@@ -68,13 +68,11 @@
   }
 }
 
-.main-navigation {
-  &.is-sticky {
-    .menu-item {
-      border-radius: 0;
-    }
-  }
+:root:not(.no-nav-sticky) body:not(.scrolled-to-top) .main-navigation.is-sticky .menu-item {
+  border-radius: 0;
+}
 
+.main-navigation {
   .icon-menu {
     display: none;
     content-visibility: hidden;
