Rename modifier CSS class for clarity

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -81,7 +81,7 @@
     padding-top: var(--page-inset-top);
     contain: style;
 
-    &._no-padding {
+    &._no-padding-top {
       padding-top: 0;
     }
 
