--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -169,9 +169,9 @@
 
   // === FOCUS =================================================================
 
-  --focus-border-color: var(--red-500);
-  // --focus-outline: 2px solid var(--focus-border-color);
-  --focus-box-shadow: inset 0 0 0 2px rgb(255 255 255 / 75%);
+  --in-focus-border-color: var(--red-500);
+  // --in-focus-outline: 2px solid var(--in-focus-border-color);
+  --in-focus-box-shadow: inset 0 0 0 2px rgb(255 255 255 / 75%);
 
   // === NAVIGATION ============================================================
 
