--- a/src/scss/common/_properties.scss
+++ b/src/scss/common/_properties.scss
@@ -273,9 +273,9 @@
 
   // === FOCUS =================================================================
 
-  --focus-border-color: #ef4d4d;
-  --focus-outline: 2px solid var(--focus-border-color);
-  --focus-box-shadow: inset 0 0 0 2px rgb(0 0 0 / 75%);
+  --in-focus-border-color: #ef4d4d;
+  --in-focus-outline: 2px solid var(--in-focus-border-color);
+  --in-focus-box-shadow: inset 0 0 0 2px rgb(0 0 0 / 75%);
 
   // === NAVIGATION ============================================================
 
