--- a/src/scss/common/_tabs.scss
+++ b/src/scss/common/_tabs.scss
@@ -28,7 +28,7 @@
     }
 
     &:focus-visible {
-      box-shadow: var(--focus-box-shadow);
+      box-shadow: var(--in-focus-box-shadow);
     }
 
     &._current {
