Add dummy sidebar for custom templates

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -858,6 +858,10 @@ html:not(.logged-in) body:not(.logged-in) {
   }
 }
 
+.widget {
+  list-style: none;
+}
+
 .browser-notes {
   font-size: 10px;
   text-align: center;
