--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -858,6 +858,17 @@ html:not(.logged-in) body:not(.logged-in) {
   }
 }
 
-.widget {
-  list-style: none;
+// Specific style resets
+.sidebar {
+  :where(ul, ol) {
+    list-style: initial;
+  }
+
+  :where(select) {
+    display: block;
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='black' d='M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z'/%3E%3C/svg%3E") no-repeat right 4px center/1em;
+    background-color: var(--input-background);
+    padding: 0 22px 0 8px;
+    height: 32px;
+  }
 }
