--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -862,6 +862,7 @@ html:not(.logged-in) body:not(.logged-in) {
 :is(.sidebar, .elementor) {
   :where(ul, ol) {
     list-style: initial;
+    padding-left: 1.75rem;
   }
 
   :where(select) {
