--- a/src/scss/customize/header-image-style-battered.scss
+++ b/src/scss/customize/header-image-style-battered.scss
@@ -2,25 +2,31 @@
 @import '../common/_mixins';
 
 :root.header-image-style-polygon-battered {
+  --header-polygon: var(--polygon-battered-half);
+
+  @include bp(tablet) {
+    --header-polygon: var(--polygon-battered);
+  }
+
   .header-background {
     border-radius: 0 !important;
 
     &__wrapper {
       border-radius: 0 !important;
-      clip-path: var(--polygon-battered-half);
+      clip-path: var(--header-polygon);
 
       @include bp(tablet) {
         margin-left: 4px;
         margin-right: 4px;
-        clip-path: var(--polygon-battered);
       }
     }
   }
 }
 
 :root.header-image-style-polygon-battered:not(.inset-header-image) {
+  --header-polygon: var(--polygon-battered-half);
+
   .header-background__wrapper {
-    --polygon-battered: var(--polygon-battered-half);
     margin-left: 0;
     margin-right: 0;
   }
