Fix list style reset
This should only target lists from blocks and nothing else. Hopefully.

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -860,7 +860,7 @@ html:not(.logged-in) body:not(.logged-in) {
 
 // Specific style resets
 :is(.sidebar, .elementor) {
-  :where(ul, ol) {
+  :where(ul, ol):where([class*="wp-block-"]) {
     list-style: initial;
     padding-left: 1.75rem;
   }
