--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -47,6 +47,8 @@
 
   // Allows for semi-transparent and clipped backgrounds without affecting the content
   &__background {
+    pointer-events: none;
+    user-select: none;
     position: absolute;
     inset: var(--page-inset-top) 0 0 0;
     z-index: 0;
