--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -120,6 +120,12 @@ body {
     }
   }
 
+  .wp-block-group-is-layout-flex {
+    .wp-block {
+      margin: 0;
+    }
+  }
+
   // =============================================================================
   // HEADINGS
   // =============================================================================
