Prevent browser image functions for logo

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -26,6 +26,7 @@
     max-height: calc(var(--header-height) - 2rem);
     width: fit-content;
     object-fit: contain;
+    pointer-events: none; // Prevents drag and Edge image function nonsense
   }
 
   &__title {
