--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ License: GNU General Public License v3.0 or later
 License URI: http://www.gnu.org/licenses/gpl.html
 
 Requires at least: 6.1.0
-Tested up to: 6.5.5
+Tested up to: 6.6.0
 Requires PHP: 7.4
-Version: 5.21.1-beta3
+Version: 5.21.1
 Text Domain: fictioneer
 
 Description: Standalone solution for publishing and reading web fictions.
